--- a/README
+++ b/README
@@ -4,3 +4,4 @@ See the gif effect:
 
 ![](https://github.com/victorfan336/RoundProgressBar/blob/master/progress~1.gif)
 
+![baidu](http://www.baidu.com/img/bdlogo.gif) 
