--- a/RoundProgressBar/README
+++ b/RoundProgressBar/README
@@ -1,1 +1,6 @@
 # HELLO Round ProgressBar
+See the gif effect:
+
+https://github.com/victorfan336/RoundProgressBar/blob/master/progress~1.gif
+
+[baidu]:http://www.baidu.com/img/bdlogo.gif
