--- a/README
+++ b/README
@@ -2,6 +2,4 @@
 
 See the gif effect:
 
-https://github.com/victorfan336/RoundProgressBar/blob/master/progress~1.gif
-
-[baidu]:http://www.baidu.com/img/bdlogo.gif
+[foryou]:https://github.com/guodongxiaren/ImageCache/raw/master/Logo/foryou.gif
